funcionalidad con js

--- a/Proyecto Integrador/FrontEnd/styles.css
+++ b/Proyecto Integrador/FrontEnd/styles.css
@@ -292,6 +292,14 @@ form label, form legend {
     transform: scale(1.05);
 }
 
+.warning{
+    width: 200 px;
+    text-align: center;
+    margin:auto;
+    color:red;
+    padding-top: 20px;
+    
+}
 
 /* SLIDER */
 
